css/style.css
body {
    background: #1a51d333;
}

.navbar {
    border-bottom: 3px solid #008ed6;
    background: #292b2c;
    opacity: 0.7;
}

.container-own {
    padding-left: 15px;
    padding-right: 15px;
}

#example {
    width: 100%;
    height: 404px;
    color: white;
}

.cover-video {
    height: 350px;
    background: url(/assets/slider1.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    border-radius: 5px;
}

.video-description {
    padding-top: 200px;
    padding-left: 80px;
}

.flex-container {
    display: flex;
    flex-direction: column;
    /* background-color: DodgerBlue; */
    height: 400px;
    overflow-y: scroll;
}

.flex-container>div {
    background-color: #f1f1f1;
    text-align: center;
}


/* .flex-container2 {
    display: flex;
}*/

.entertainment-div {
    background-color: #cacaca;
    margin: 10px;
    padding: 20px;
    font-size: 30px;
    height: 330px;
    border-radius: 10px;
}

